@@ -1,3 +1,14 @@
+2008-04-24  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Sam Weinig.
+        
+        Print a CRASH statement when crashing, so test failures are not a
+        mystery.
+
+        * kjs/testkjs.cpp:
+        (handleCrash):
+        (main):
+
 2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
 
         Reviewed by Geoffrey Garen.
